Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-18837

galera.MW-388: Test failure: mysqltest: Result length mismatch

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.4.3
    • 10.4.4
    • Galera, Tests
    • OS: CentOS Linux release 7.6.1810 (Core).

    Description

      MariaDB Server: 10.4.3-MariaDB-debug built from sources, branch=10.4, commit: 2a791c53ad93c8bc1441dd227000234bd49c4990.
      Galera4 lib 26.4.0(r4477): debug built from sources, commit: 9bd47835d0fcdcf2f041da39dbe5b98ff738ff10.

      Run:

      ./mtr --suite galera --force --big-test --max-test-fail=0 --parallel=auto
      ./mtr galera.MW-388 --force --max-test-fail=0 --repeat=3
      

      stdout.log: (attached 190306_galera.MW-388_stdout_laptop.log)

      galera.MW-388 'innodb'                   [ fail ]
       
      @@ -23,7 +23,7 @@
       SET SESSION DEBUG_SYNC = 'wsrep_after_certification SIGNAL wsrep_after_certification_reached WAIT_FOR wsrep_after_certification_continue';
       CALL insert_proc ();;
       connection node_1a;
      -SET SESSION DEBUG_SYNC = "now WAIT_FOR wsrep_after_replication_reached";
      +SET SESSION DEBUG_SYNC = "now WAIT_FOR wsrep_after_certification_reached";
       SET GLOBAL DEBUG_DBUG = "";
       SET DEBUG_SYNC = "now SIGNAL wsrep_after_replication_continue";
       SET DEBUG_SYNC = "now SIGNAL signal.wsrep_apply_cb";
      @@ -31,7 +31,7 @@
       connection node_1;
       SELECT @errno = 1213;
       @errno = 1213
      -1
      +0
       SELECT * FROM t1;
       f1	f2
       1	node 2
       
      mysqltest: Result length mismatch
      

      See also attached 190306_galera.MW-388.zip.

      Attachments

        Issue Links

          Activity

            There are no comments yet on this issue.

            People

              jplindst Jan Lindström (Inactive)
              stepan.patryshev Stepan Patryshev (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.