MDEV-18837 Fixed stored procedure wsrep error handling and MW-388

Fixed sync points in MW-388 and fixed SP wsrep error handling to
avoid propagating wsrep errors via client-server protocol response.